# ThinClaw

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Agent_flow.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  Dockerfile.worker  FEATURE_PARITY.md  LICENSE-APACHE  LICENSE-MIT  License.md  README.md  REMOTE_DEPLOYMENT.md  agent_flows_architecture.md  agent_skill_system_audit.md  audit.md  build.rs  clawdbot_docs.md  clippy.toml  codecov.json  codecov.yml  connect_remote_gateway.md  database_divergence_plan.md  deny.toml  docker-compose.yml  ironclaw_agent_answers.md  openclaw_docs.md  openclaw_rename.md  package-lock.json  package.json  release-please-config.json  release-plz.toml  remote-server.md  rustfmt.toml  (+4 more)
apps/desktop/backend/: .taurignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json
crates/thinclaw-agent/: Cargo.toml
crates/thinclaw-agent/src/: agent_loop.rs  agent_registry.rs  agent_router.rs  agentic_flows.rs  checkpoint.rs  command_catalog.rs  command_registry.rs  compaction.rs  context_monitor.rs  cost_guard.rs  cron_stagger.rs  dispatcher_helpers.rs  dispatcher_policy.rs  env.rs  global_session.rs  heartbeat.rs  hook_dispatch.rs  job_monitor.rs  learning_outcome_records.rs  learning_policy.rs  learning_provider_policy.rs  learning_provider_types.rs  learning_types.rs  lib.rs  loop_control.rs  outbound_media.rs  outcomes.rs  personality.rs  ports.rs  ports_context.rs  ports_learning.rs  ports_llm.rs  prompt_assembly.rs  prompt_sanitation.rs  router.rs  routine.rs  routine_engine.rs  routine_tools.rs  run_artifact.rs  run_driver.rs  (+21 more)
crates/thinclaw-app/: Cargo.toml
crates/thinclaw-app/src/: acp.rs  assembly.rs  lib.rs  model.rs  runtime.rs  setup.rs
crates/thinclaw-branding/: Cargo.toml
crates/thinclaw-branding/src/: art.rs  lib.rs  skin.rs
crates/thinclaw-channels/: Cargo.toml
crates/thinclaw-channels-core/: Cargo.toml
crates/thinclaw-channels-core/src/: channel.rs  lib.rs
crates/thinclaw-channels/src/: acp.rs  apns_push.rs  apple_mail.rs  bluebubbles.rs  canvas_gateway.rs  discord.rs  forward_download.rs  gmail.rs  gmail_wiring.rs  health_monitor.rs  http.rs  imessage.rs  lib.rs  manager.rs  native_lifecycle.rs  native_lifecycle_clients.rs  nostr.rs  nostr_runtime.rs  pairing.rs  repl.rs  response.rs  self_message.rs  setup.rs  signal.rs  status_view.rs  tui.rs  util.rs  webhook_server.rs
crates/thinclaw-client/: Cargo.toml
crates/thinclaw-client/examples/: chat_loop.rs
crates/thinclaw-client/src/: client.rs  error.rs  lib.rs  sse.rs  wire.rs
crates/thinclaw-client/tests/: wire_contract.rs
crates/thinclaw-config/: Cargo.toml
crates/thinclaw-config/src/: agent.rs  builder.rs  channel_config.rs  channels.rs  comfyui.rs  database.rs  desktop_autonomy.rs  embeddings.rs  experiments.rs  heartbeat.rs  helpers.rs  hygiene.rs  lib.rs  llm.rs  mdns_discovery.rs  model_compat.rs  provider_catalog.rs  repo_projects.rs  routines.rs  safety.rs  sandbox.rs  secrets.rs  skills.rs  tunnel.rs  wasm.rs  watcher.rs  webchat.rs
crates/thinclaw-context/: Cargo.toml
crates/thinclaw-context/src/: lib.rs  read_audit.rs
crates/thinclaw-db/: Cargo.toml
crates/thinclaw-db/src/: lib.rs  libsql_migrations.rs  libsql_migrations_tests.rs  postgres.rs  postgres_workspace.rs
crates/thinclaw-experiments/: Cargo.toml
crates/thinclaw-experiments/src/: cost.rs  lib.rs  messages.rs  opportunities.rs  policy.rs  support.rs  tests.rs  types.rs
crates/thinclaw-gateway/: Cargo.toml
crates/thinclaw-gateway/src/: lib.rs
crates/thinclaw-history/: Cargo.toml
crates/thinclaw-history/src/: lib.rs  records.rs
crates/thinclaw-identity/: Cargo.toml
crates/thinclaw-identity/src/: lib.rs
crates/thinclaw-llm/: Cargo.toml
crates/thinclaw-llm-core/: Cargo.toml
crates/thinclaw-llm-core/src/: lib.rs  prompt_contract.rs  prompt_stack.rs  provider.rs  routing_policy.rs  smart_routing.rs  streaming.rs  turn_analysis.rs
crates/thinclaw-llm-core/tests/: prompt_contract_eval.rs
crates/thinclaw-llm/src/: bounded_http_client.rs  cascade.rs  circuit_breaker.rs  cost_tracker.rs  costs.rs  discovery.rs  failover.rs  gemini.rs  lib.rs  llms_txt.rs  model_guidance.rs  model_metadata_sync.rs  provider_factory.rs  provider_presets.rs  reasoning_tags.rs  response_cache.rs  response_cache_ext.rs  retry.rs  rig_adapter.rs  route_planner.rs  smart_routing.rs  usage_tracking.rs
crates/thinclaw-media/: Cargo.toml
crates/thinclaw-media/src/: cache.rs  comfyui.rs  document.rs  extractor.rs  image.rs  lib.rs  limits.rs  pdf.rs  sticker.rs  tts.rs  video.rs
crates/thinclaw-platform/: Cargo.toml
crates/thinclaw-platform/src/: artifact_publish.rs  fs.rs  lib.rs  paths.rs  process.rs  shell.rs  timezone.rs
crates/thinclaw-portability/: Cargo.toml
crates/thinclaw-portability/src/: bundle.rs  envelope.rs  error.rs  lib.rs  manifest.rs
crates/thinclaw-runtime-contracts/: Cargo.toml
crates/thinclaw-safety/: Cargo.toml
crates/thinclaw-secrets/: Cargo.toml
crates/thinclaw-settings/: Cargo.toml
crates/thinclaw-tools/: Cargo.toml
crates/thinclaw-tools-core/: Cargo.toml
crates/thinclaw-types/: Cargo.toml
crates/thinclaw-workspace/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_credential_detect.rs  fuzz_leak_detector.rs  fuzz_sanitizer.rs  fuzz_validator.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260116205500_add_attached_docs.sql  20260209000000_generated_images.sql
src-tauri/moltbot/: main.js  package-lock.json  package.json
src-tauri/openclaw-engine/: Dockerfile  deploy-remote.sh  docker-compose.yml  package-lock.json  package.json
src-tauri/scripts/: download_ai_binaries.js  setup_chromium.sh
src-tauri/src/: chat.rs  check_skills.rs  config.rs  gguf.rs  history.rs  image_gen.rs  images.rs  imagine.rs  lib.rs  model_manager.rs  process_tracker.rs  projects.rs  rag.rs  reranker.rs  sidecar.rs  stt.rs  system.rs  templates.rs  tts.rs  vector_store.rs  web_search.rs
src-tauri/src/rig_lib/: mod.rs  (+8 more)
(+2841 files in other folders)
