[workspace]
members = ["."]
exclude = [
    "channels-src/discord",
    "channels-src/telegram",
    "channels-src/slack",
    "channels-src/whatsapp",
    "fuzz",
    "tools-src/github",
    "tools-src/gmail",
    "tools-src/google-calendar",
    "tools-src/google-docs",
    "tools-src/google-drive",
    "tools-src/google-sheets",
    "tools-src/google-slides",
    "tools-src/okta",
    "tools-src/slack",
    "tools-src/telegram",
]

[package]
name = "thinclaw"
version = "0.13.6"
edition = "2024"
rust-version = "1.92"
description = "Secure personal agent that protects your data and expands its capabilities on the fly"
authors = ["RNT56 (ThinClaw)"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RNT56/ThinClaw"
repository = "https://github.com/RNT56/ThinClaw"
publish = false

[package.metadata.wix]
upgrade-guid = "D0156E61-BA37-451E-8AB9-1A2ECCCFA48F"
path-guid = "F90B6EA6-87F7-499B-BB19-CF55DE1EB339"
license = false
eula = false

[package.metadata.dist]
dist = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - PostgreSQL (default, feature-gated)
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
postgres-types = { version = "0.2", features = ["with-serde_json-1"], optional = true }
refinery = { version = "0.8", features = ["tokio-postgres"], optional = true }

# Database - libSQL/Turso (optional embedded database)
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Core types
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1"

# Async traits
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.28"
rustyline = { version = "17", features = ["custom-bindings", "derive", "with-file-history"] }
termimad = "0.34"

# Channel integrations
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }

# Cron scheduling for routines
cron = "0.13"

# Safety/sanitization
regex = "1"
aho-corasick = "1"
unicode-normalization = "0.1"
jsonschema = "0.18"

# YAML parsing for SKILL.md frontmatter
serde_yaml_ng = "0.10"

# Filesystem paths
dirs = "6"
fs4 = "0.6"

# Secrecy for sensitive values
secrecy = { version = "0.10", features = ["serde"] }

# URL parsing and encoding
url = "2"
urlencoding = "2"

# Open URLs in browser
open = "5"

# Vector embeddings for semantic search
# The postgres feature provides ToSql/FromSql for postgres-types (shared by tokio-postgres)
pgvector = { version = "0.4", features = ["postgres"], optional = true }

# WASM sandbox for untrusted tool execution
wasmtime = { version = "36", default-features = false, features = ["component-model", "cranelift", "runtime", "async", "cache", "std", "parallel-compilation"] }
wasmtime-wasi = "36"  # WASI support for component model
wasmparser = "0.220"  # WASM binary parsing for validation

# Cryptography for secrets management
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
subtle = "2"  # Constant-time comparisons for token validation
hmac = "0.12"  # HMAC-SHA256 for webhook signing
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"

# Multi-provider LLM support
rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }

# Docker sandbox
bollard = "0.18"

# Archive extraction for WASM extension bundles
flate2 = "1"
tar = "0.4"

# HTTP proxy for sandboxed network access
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22.1"
mime_guess = "2.0.5"
clap_complete = "4.5.0"
lru = "0.16.3"

# HTML to Markdown conversion (feature gated)
html-to-markdown-rs = { version = "2.3", optional = true }
readabilityrs = { version = "0.1.2", optional = true }
sysinfo = "0.38.2"
nostr-sdk = { version = "0.44.1", default-features = false, features = ["nip04", "nip59"], optional = true }
chromiumoxide = { version = "0.9.1", optional = true }
ratatui = "0.30.0"
ratatui-textarea = { version = "0.9", default-features = false, features = ["crossterm"] }
unicode-width = "0.2.2"
textwrap = "0.16.2"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tempfile = "3"

# Document extraction (feature gated)
pdf-extract = { version = "0.7", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

# Timezone handling
chrono-tz = { version = "0.10", optional = true }
iana-time-zone = "0.1"

# PostgreSQL TLS (feature gated, pulled in by postgres feature)
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
rustls-native-certs = { version = "0.8", optional = true }

# QR code rendering for terminal pairing
qrcode = "0.14"

# AWS Bedrock (native InvokeModel API for embeddings, opt-in via --features bedrock)
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }

# Audio capture for voice wake word detection (headless mode only)
cpal = { version = "0.15", optional = true }

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

# Linux secret-service (GNOME Keyring, KWallet)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
zbus = "4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
criterion = "0.5"
insta = { version = "1", features = ["json", "yaml"] }

[build-dependencies]
serde_json = "1"

[features]
# Default: lightweight build — core agent + databases + gateway + HTML/doc tools.
# Use --features full for everything. See docs/BUILD_PROFILES.md
default = ["light"]
# Lightweight build — includes the local gateway; no tunnel, no Docker, no voice,
# no local browser, no nostr. Saves ~65 MB of binary size vs full.
light = [
    "postgres",
    "libsql",
    "html-to-markdown",
    "document-extraction",
    "timezones",
]
# Desktop embedding (Tauri/Scrappy) — minimal footprint
desktop = ["libsql", "html-to-markdown", "document-extraction", "repl", "timezones"]
# Individual runtime modules (can be combined with light)
web-gateway = []
acp = []
repl = []
tunnel = []
docker-sandbox = []
browser = ["dep:chromiumoxide"]
nostr = ["dep:nostr-sdk"]
timezones = ["dep:chrono-tz"]
# Everything — full-featured agent with all capabilities
full = [
    "light",
    "acp",
    "web-gateway",
    "repl",
    "tunnel",
    "docker-sandbox",
    "browser",
    "nostr",
]
postgres = [
    "dep:deadpool-postgres",
    "dep:tokio-postgres",
    "dep:tokio-postgres-rustls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:postgres-types",
    "dep:refinery",
    "dep:pgvector",
    "rust_decimal/db-tokio-postgres",
]
libsql = ["dep:libsql"]
integration = []
html-to-markdown = ["dep:html-to-markdown-rs", "dep:readabilityrs"]
# Document text extraction — PDF (pdf-extract), DOCX/PPTX/XLSX (zip crate)
document-extraction = ["dep:pdf-extract", "dep:zip"]
# Embed all WASM extensions into the binary for air-gapped / zero-network deployments.
# Extensions are extracted to ~/.thinclaw/{tools,channels}/ on first install.
# Increases binary size by ~6-13 MB but requires no network access.
bundled-wasm = []
# Voice wake word detection — adds cpal for audio capture.
# Only enable for headless/remote mode; in desktop mode Scrappy owns the mic.
voice = ["dep:cpal"]
# AWS Bedrock embeddings — adds aws-config + aws-sdk-bedrockruntime.
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]

[[test]]
name = "html_to_markdown"
required-features = ["html-to-markdown"]

[[bin]]
name = "thinclaw-acp"
path = "src/bin/thinclaw-acp.rs"
required-features = ["acp"]

[[bench]]
name = "safety_sanitize"
harness = false

[[bench]]
name = "safety_pipeline"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = "symbols"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Which actions to run on pull requests
pr-run-mode = "skip"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
# Whether builds should try to be cached in CI
cache-builds = true

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-pc-windows-msvc = "windows-2022"
x86_64-apple-darwin = "macos-15-intel"
aarch64-apple-darwin = "macos-14"

# ── Lint configuration ──────────────────────────────────────────────────
# These settings are applied by both `cargo clippy` and CI.
# Warnings are treated as errors in CI via `clippy -- -D warnings`.
[lints.clippy]
# Design choices — allow these intentionally:
too_many_arguments    = "allow"  # Builder/config functions legitimately need many params
should_implement_trait = "allow"  # from_str() helpers aren't always FromStr
module_name_repetitions = "allow"  # e.g. WorkspaceStorage in workspace module

# Documentation nits — allow (don't block PRs on doc formatting):
doc_overindented_list_items = "allow"
doc_lazy_continuation      = "allow"

[lints.rust]
# Treat unused imports as warnings (default), not errors.
# CI will still catch them via `-D warnings`.
unused_imports = "warn"

# Patch libsql to handle sqlite3_config SQLITE_MISUSE gracefully.
# sqlx-sqlite (used by Scrappy) calls sqlite3_config() first; the stock libsql
# asserts on the duplicate call. Our patch checks sqlite3_threadsafe() instead.
[patch.crates-io]
libsql = { path = "patches/libsql-0.6.0" }
