[workspace]
members = [".", "crates/*"]
exclude = [
    "apps/desktop/backend",
    "channels-src/discord",
    "channels-src/telegram",
    "channels-src/slack",
    "channels-src/whatsapp",
    "fuzz",
    "tools-src/github",
    "tools-src/gmail",
    "tools-src/google-calendar",
    "tools-src/google-docs",
    "tools-src/google-drive",
    "tools-src/google-sheets",
    "tools-src/google-slides",
    "tools-src/okta",
    "tools-src/slack",
    "tools-src/telegram",
]

# Centralized versions for deps used identically across the workspace. Member
# crates reference these via `<dep> = { workspace = true }` so a version bump
# happens once here instead of drifting per-crate. Deps with per-crate feature
# divergence (tokio, uuid, reqwest) and rand are intentionally not yet hoisted.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
utoipa = { version = "5", features = ["uuid"] }

[package]
name = "thinclaw"
version = "0.15.0"
edition = "2024"
rust-version = "1.92"
autobins = false
description = "Secure personal agent that protects your data and expands its capabilities on the fly"
authors = ["RNT56 (ThinClaw)"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RNT56/ThinClaw"
repository = "https://github.com/RNT56/ThinClaw"
publish = false

[package.metadata.wix]
upgrade-guid = "D0156E61-BA37-451E-8AB9-1A2ECCCFA48F"
path-guid = "F90B6EA6-87F7-499B-BB19-CF55DE1EB339"
license = false
eula = false

[package.metadata.dist]
dist = true

[dependencies]
thinclaw-types = { version = "0.1.0", path = "crates/thinclaw-types", default-features = false }
thinclaw-agent = { version = "0.1.0", path = "crates/thinclaw-agent" }
thinclaw-app = { version = "0.1.0", path = "crates/thinclaw-app" }
thinclaw-branding = { version = "0.1.0", path = "crates/thinclaw-branding" }
thinclaw-db = { version = "0.1.0", path = "crates/thinclaw-db" }
thinclaw-channels = { version = "0.1.0", path = "crates/thinclaw-channels" }
thinclaw-channels-core = { version = "0.1.0", path = "crates/thinclaw-channels-core" }
thinclaw-config = { version = "0.1.0", path = "crates/thinclaw-config" }
thinclaw-context = { version = "0.1.0", path = "crates/thinclaw-context" }
thinclaw-experiments = { version = "0.1.0", path = "crates/thinclaw-experiments" }
thinclaw-gateway = { version = "0.1.0", path = "crates/thinclaw-gateway", features = ["openapi"] }
thinclaw-history = { version = "0.1.0", path = "crates/thinclaw-history" }
thinclaw-identity = { version = "0.1.0", path = "crates/thinclaw-identity" }
thinclaw-llm = { version = "0.1.0", path = "crates/thinclaw-llm" }
thinclaw-llm-core = { version = "0.1.0", path = "crates/thinclaw-llm-core" }
thinclaw-media = { version = "0.1.0", path = "crates/thinclaw-media" }
thinclaw-platform = { version = "0.1.0", path = "crates/thinclaw-platform" }
thinclaw-portability = { version = "0.1.0", path = "crates/thinclaw-portability" }
thinclaw-repo-projects = { version = "0.1.0", path = "crates/thinclaw-repo-projects" }
thinclaw-runtime-contracts = { version = "0.1.0", path = "crates/thinclaw-runtime-contracts" }
thinclaw-safety = { version = "0.1.0", path = "crates/thinclaw-safety" }
thinclaw-secrets = { version = "0.1.0", path = "crates/thinclaw-secrets", default-features = false }
thinclaw-settings = { version = "0.1.0", path = "crates/thinclaw-settings" }
thinclaw-soul = { version = "0.1.0", path = "crates/thinclaw-soul" }
thinclaw-tools = { version = "0.1.0", path = "crates/thinclaw-tools" }
thinclaw-tools-core = { version = "0.1.0", path = "crates/thinclaw-tools-core" }
thinclaw-workspace = { version = "0.1.0", path = "crates/thinclaw-workspace" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }
async-stream = "0.3"

# HTTP client. `http2` is required so the native APNs client can negotiate h2
# via ALPN — Apple's push endpoint only accepts HTTP/2.
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream", "http2"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI contract generation (gateway v1 mobile contract)
utoipa = { workspace = true }

# Database - PostgreSQL (default, feature-gated)
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
postgres-types = { version = "0.2", features = ["with-serde_json-1"], optional = true }
refinery = { version = "0.9", features = ["tokio-postgres"], optional = true }

# Database - libSQL/Turso (optional embedded database)
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"
toml = "1.1"

# Core types
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { workspace = true }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1"

# Async traits
async-trait = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.29"
rustyline = { version = "18", features = ["custom-bindings", "derive", "with-file-history"] }
termimad = "0.35"

# Channel integrations
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors", "set-header"] }

# Cron scheduling for routines
cron = "0.17"

# Safety/sanitization
regex = "1"
aho-corasick = "1"
unicode-normalization = "0.1"
jsonschema = { version = "0.47", default-features = false }
jsonwebtoken = "9"

# YAML parsing for SKILL.md frontmatter
serde_yaml_ng = "0.10"

# Filesystem paths
dirs = "6"
fs4 = "1.1"

# Secrecy for sensitive values
secrecy = { version = "0.10", features = ["serde"] }

# URL parsing and encoding
url = "2"
urlencoding = "2"

# Open URLs in browser
open = "5"

# Vector embeddings for semantic search
# The postgres feature provides ToSql/FromSql for postgres-types (shared by tokio-postgres)
pgvector = { version = "0.4", features = ["postgres"], optional = true }

# WASM sandbox for untrusted tool execution
wasmtime = { version = "44.0.3", default-features = false, features = ["component-model", "cranelift", "runtime", "async", "cache", "std", "parallel-compilation"], optional = true }
wasmtime-wasi = { version = "44.0.3", optional = true }  # WASI support for component model
wasmparser = { version = "0.244", optional = true }  # WASM binary parsing for validation

# Cryptography for secrets management
aes-gcm = "0.11"
hkdf = "0.13"
sha2 = "0.11"
blake3 = "1"
rand = "0.10"
subtle = "2"  # Constant-time comparisons for token validation
hmac = "0.13"  # HMAC-SHA256 for webhook signing
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"

# Multi-provider LLM support
rig-core = { version = "0.33", default-features = false, features = ["reqwest-rustls"] }

# Docker sandbox
bollard = { version = "0.21", optional = true }

# Archive extraction for WASM extension bundles
flate2 = "1"
tar = "0.4"

# HTTP proxy for sandboxed network access
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22.1"
mime_guess = "2.0.5"
clap_complete = "4.5.0"
lru = "0.18.0"
libloading = "0.9"

sysinfo = "0.38.2"
nostr-sdk = { version = "0.44.1", default-features = false, features = ["nip04", "nip59"], optional = true }
chromiumoxide = { version = "0.9.1", optional = true }
ratatui = "0.30.0"
ratatui-textarea = { version = "0.9", default-features = false, features = ["crossterm"] }
unicode-width = "0.2.2"
textwrap = "0.16.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tempfile = "3"

# Timezone handling
chrono-tz = "0.10"
iana-time-zone = "0.1"

# PostgreSQL TLS (feature gated, pulled in by postgres feature)
tokio-postgres-rustls = { version = "0.14", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
rustls-native-certs = { version = "0.8", optional = true }

# QR code rendering for terminal pairing
qrcode = "0.14"

# AWS Bedrock (native InvokeModel API for embeddings, opt-in via --features bedrock)
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }

# Audio capture for voice wake word detection (headless mode only)
cpal = { version = "0.18", optional = true }
prometheus-client = "0.25"

# Optional rustls TLS listener for the gateway (mobile device pairing, D-X1)
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls"], optional = true }
rcgen = { version = "0.14", optional = true }
if-addrs = { version = "0.15", optional = true }

# Optional mDNS/Bonjour LAN discovery responder (mobile locator, B3).
# Pure-Rust, no system dependencies (no Avahi/Bonjour daemon required).
mdns-sd = { version = "0.20", optional = true }

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

# Linux secret-service (GNOME Keyring, KWallet)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
zbus = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
criterion = "0.8"
insta = { version = "1", features = ["json", "yaml"] }

[build-dependencies]
serde_json = { workspace = true }

[features]
# Default: lightweight build — core agent + databases + gateway + HTML/doc tools.
# Use --features full for everything. See docs/BUILD_PROFILES.md
default = ["light"]
# Edge build — small-machine runtime with libSQL only. No Postgres, browser,
# Docker, Nostr, bundled WASM, document extraction, or WASM runtime.
edge = ["libsql"]
# Lightweight build — includes the local gateway, sandbox runtime, and core tools;
# no tunnel, local browser, voice, or nostr.
light = [
    "edge",
    "postgres",
    "docker-sandbox",
    "wasm-runtime",
    "html-to-markdown",
    "document-extraction",
    "timezones",
    "gateway-tls",
    "mdns",
]
# Desktop embedding (ThinClaw Desktop/Tauri) — minimal footprint
desktop = ["libsql", "html-to-markdown", "document-extraction", "repl", "timezones"]
# Explicit CI/integration profile for the dual-backend schema parity test.
# Kept out of default builds because the test requires a live PostgreSQL URL.
schema-divergence = ["postgres", "libsql"]
# Individual runtime modules (can be combined with light)
web-gateway = []
acp = []
repl = []
tunnel = []
docker-sandbox = ["dep:bollard"]
wasm-runtime = [
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:wasmparser",
    "thinclaw-channels/wasm-runtime",
    "thinclaw-tools/wasm-runtime",
]
browser = ["dep:chromiumoxide", "thinclaw-config/browser", "thinclaw-tools/browser"]
# Optional rustls TLS listener for the gateway (mobile device pairing, D-X1).
gateway-tls = ["dep:axum-server", "dep:rcgen", "dep:if-addrs"]
# Optional mDNS/Bonjour LAN discovery responder (mobile locator, B3).
mdns = ["dep:mdns-sd"]
nostr = [
    "thinclaw-channels/nostr",
    "thinclaw-config/nostr",
    "thinclaw-tools/nostr",
    "dep:nostr-sdk",
]
# Core scheduling/workspace APIs always use chrono-tz; keep this as a
# compatibility feature for existing build profiles and docs.
timezones = []
# Everything — full-featured agent with all capabilities.
# NOTE: `voice` (headless wake word) is intentionally NOT in `full`. It pulls cpal →
# the system ALSA lib (libasound2-dev) on Linux, which would force that system
# dependency onto every `--features full` build, CI job, and release artifact. It
# stays opt-in (`--features voice`) and is still exercised by `--all-features`.
full = [
    "light",
    "acp",
    "web-gateway",
    "repl",
    "tunnel",
    "docker-sandbox",
    "browser",
    "nostr",
]
postgres = [
    "thinclaw-types/postgres",
    "thinclaw-db/postgres",
    "thinclaw-secrets/postgres",
    "thinclaw-tools/postgres",
    "thinclaw-workspace/postgres",
    "dep:deadpool-postgres",
    "dep:tokio-postgres",
    "dep:tokio-postgres-rustls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:postgres-types",
    "dep:refinery",
    "dep:pgvector",
    "rust_decimal/db-tokio-postgres",
]
libsql = [
    "thinclaw-types/libsql",
    "thinclaw-db/libsql",
    "thinclaw-secrets/libsql",
    "thinclaw-tools/libsql",
    "dep:libsql",
]
integration = []
html-to-markdown = ["thinclaw-tools/html-to-markdown"]
# Document text extraction — PDF (pdf-extract), DOCX/PPTX/XLSX (zip crate)
document-extraction = ["thinclaw-media/document-extraction", "thinclaw-tools/document-extraction"]
# Embed all WASM extensions into the binary for air-gapped / zero-network deployments.
# Extensions are extracted to ~/.thinclaw/{tools,channels}/ on first install.
# Increases binary size by ~6-13 MB but requires no network access.
bundled-wasm = ["wasm-runtime"]
# Voice wake word detection — adds cpal for audio capture.
# Only enable for headless/remote mode; in desktop mode ThinClaw Desktop owns the mic.
voice = ["dep:cpal", "thinclaw-config/voice"]
# AWS Bedrock embeddings — adds aws-config + aws-sdk-bedrockruntime.
bedrock = [
    "thinclaw-workspace/bedrock",
    "dep:aws-config",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-smithy-types",
]

[[test]]
name = "html_to_markdown"
required-features = ["html-to-markdown"]

[[bin]]
name = "thinclaw"
path = "src/main.rs"

[[bin]]
name = "thinclaw-acp"
path = "src/bin/thinclaw-acp.rs"
required-features = ["acp"]

[[bin]]
name = "thinclaw-shell-scan"
path = "src/bin/thinclaw-shell-scan.rs"

[[example]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[[bench]]
name = "safety_sanitize"
harness = false

[[bench]]
name = "safety_pipeline"
harness = false

[[bench]]
name = "loop_control"
harness = false

# Normal source release builds should produce a runnable binary without keeping
# symbol tables in the installed artifact. Cargo's release profile already
# disables debug info and incremental compilation by default.
[profile.release]
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = "symbols"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Production release artifacts include the full non-desktop/headless runtime
# used by Pi OS Lite native installs: gateway, channels, tunnels, Docker
# sandbox/browser fallback, ACP, Nostr, libSQL, and Postgres.
features = ["full"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Which actions to run on pull requests
pr-run-mode = "skip"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
# Whether builds should try to be cached in CI
cache-builds = true

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
aarch64-unknown-linux-musl = "ubuntu-24.04-arm"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-unknown-linux-musl = "ubuntu-22.04"
x86_64-pc-windows-msvc = "windows-2022"
x86_64-apple-darwin = "macos-15-intel"
aarch64-apple-darwin = "macos-14"

# ── Lint configuration ──────────────────────────────────────────────────
# These settings are applied by both `cargo clippy` and CI.
# Warnings are treated as errors in CI via `clippy -- -D warnings`.
[lints.clippy]
# Design choices — allow these intentionally:
too_many_arguments    = "allow"  # Builder/config functions legitimately need many params
should_implement_trait = "allow"  # from_str() helpers aren't always FromStr
module_name_repetitions = "allow"  # e.g. WorkspaceStorage in workspace module

# Panic prevention — prefer expect("reason"), ?, or unwrap_or in production code.
# The current test suite intentionally uses unwrap() heavily; keep this allow
# until test-only lint policy is split from production lint policy.
unwrap_used = "allow"

# Test/style lints that are currently noisy under `--all-targets`.
bool_assert_comparison = "allow"
cloned_ref_to_slice_refs = "allow"
field_reassign_with_default = "allow"
if_same_then_else = "allow"
items_after_test_module = "allow"
large_enum_variant = "allow"
needless_borrow = "allow"
useless_format = "allow"

# Documentation nits — allow (don't block PRs on doc formatting):
doc_overindented_list_items = "allow"
doc_lazy_continuation      = "allow"

[lints.rust]
# Treat unused imports as warnings (default), not errors.
# CI will still catch them via `-D warnings`.
unused_imports = "warn"

# Patch libsql to handle sqlite3_config SQLITE_MISUSE gracefully.
# sqlx-sqlite (used by ThinClaw Desktop) calls sqlite3_config() first; the stock libsql
# asserts on the duplicate call. Our patch checks sqlite3_threadsafe() instead.
[patch.crates-io]
libsql = { path = "patches/libsql-0.6.0" }
