[package]
name = "Scrappy"
version = "0.1.0"
description = "A Tauri App"
authors = ["RNT56"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
rand = "0.8"
futures = "0.3.31"
tauri-specta = { version = "^2.0.0-rc", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc", features = ["derive", "serde", "serde_json"] }
specta-typescript = "0.0.7"
usearch = "2.23.0"
pdf-extract = "0.7"
ort = { version = "=2.0.0-rc.9", features = ["download-binaries"] }
tokenizers = "0.22.2"
ndarray = "0.16.1"
image = { version = "0.25.9", features = ["jpeg", "png"] }
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
sysinfo = "0.30"
tempfile = "3.24.0"
scraper = "0.25.0"
chrono = "0.4.43"
rig-core = "0.7.0"
html2text = "0.13.5"
urlencoding = "2"
eventsource-stream = "0.2.3"
chromiumoxide = { version = "0.8.0", features = ["tokio-runtime"] }
zip = "0.6"
tauri-plugin-fs = "2.4.5"

tokio-stream = "0.1.18"
sha2 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
futures-util = "0.3"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem"] }
pkcs8 = { version = "0.10.2", features = ["std", "pem"] }


