[package]
name = "thinclaw-app"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
