[package]
name = "thinclaw-channels-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-identity = { version = "0.1.0", path = "../thinclaw-identity" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
