[package]
name = "thinclaw-channels"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-channels-core = { version = "0.1.0", path = "../thinclaw-channels-core" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
axum = "0.8"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
tokio = { version = "1", features = ["fs", "net", "rt", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "36", default-features = false, features = ["component-model", "cranelift", "runtime", "async", "cache", "std", "parallel-compilation"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
